# claude-evernote-connector

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
claude_evernote/: __init__.py  cli.py  client.py
examples/: save_chat.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py
